[package]
name = "miraland-account-decoder"
version = "1.14.17-rc5"
description = "Miraland account decoder"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-account-decoder"
license = "Apache-2.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
lazy_static = "1.4.0"
miraland-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.14.17-rc5" }
miraland-config-program = { path = "../programs/config", version = "=1.14.17-rc5" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc5" }
miraland-vote-program = { path = "../programs/vote", version = "=1.14.17-rc5" }
serde = "1.0.138"
serde_derive = "1.0.103"
serde_json = "1.0.81"
solarti-token = { version = "3.5", features = ["no-entrypoint"] }
solarti-token-2022 = { version = "0.6", features = ["no-entrypoint"] }
thiserror = "1.0"
winnow = "=0.4.1"
zstd = "0.11.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
