[package]
name = "miraland-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
miraland-accounts-db = { workspace = true }
miraland-logger = { workspace = true }
miraland-measure = { workspace = true }
miraland-sdk = { workspace = true }
miraland-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
