[package]
name = "miraland-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
# MI, See Cargo.toml of the workspace for more details
# MI, will delete next line once crossbeam-epoch patch v0.9.5 removed.
crossbeam-deque = { workspace = true }
log = { workspace = true }
miraland-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
miraland-logger = { workspace = true }
miraland-measure = { workspace = true }
miraland-sdk = { workspace = true }
miraland-version = { workspace = true }
rayon = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []
