[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "miraland-accounts-cluster-bench"
version = "1.14.17"
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
miraland-account-decoder = { path = "../account-decoder", version = "=1.14.17" }
miraland-clap-utils = { path = "../clap-utils", version = "=1.14.17" }
miraland-client = { path = "../client", version = "=1.14.17" }
miraland-faucet = { path = "../faucet", version = "=1.14.17" }
miraland-gossip = { path = "../gossip", version = "=1.14.17" }
miraland-logger = { path = "../logger", version = "=1.14.17" }
miraland-measure = { path = "../measure", version = "=1.14.17" }
miraland-net-utils = { path = "../net-utils", version = "=1.14.17" }
miraland-runtime = { path = "../runtime", version = "=1.14.17" }
miraland-sdk = { path = "../sdk", version = "=1.14.17" }
miraland-streamer = { path = "../streamer", version = "=1.14.17" }
miraland-transaction-status = { path = "../transaction-status", version = "=1.14.17" }
miraland-version = { path = "../version", version = "=1.14.17" }
rand = "0.7.0"
rayon = "1.5.3"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
miraland-core = { path = "../core", version = "=1.14.17" }
miraland-local-cluster = { path = "../local-cluster", version = "=1.14.17" }
miraland-test-validator = { path = "../test-validator", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
