[package]
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
edition = "2021"
name = "miraland-accounts-cluster-bench"
version = "1.14.17-rc7"
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
miraland-account-decoder = { path = "../account-decoder", version = "=1.14.17-rc7" }
miraland-clap-utils = { path = "../clap-utils", version = "=1.14.17-rc7" }
miraland-client = { path = "../client", version = "=1.14.17-rc7" }
miraland-faucet = { path = "../faucet", version = "=1.14.17-rc7" }
miraland-gossip = { path = "../gossip", version = "=1.14.17-rc7" }
miraland-logger = { path = "../logger", version = "=1.14.17-rc7" }
miraland-measure = { path = "../measure", version = "=1.14.17-rc7" }
miraland-net-utils = { path = "../net-utils", version = "=1.14.17-rc7" }
miraland-runtime = { path = "../runtime", version = "=1.14.17-rc7" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc7" }
miraland-streamer = { path = "../streamer", version = "=1.14.17-rc7" }
miraland-transaction-status = { path = "../transaction-status", version = "=1.14.17-rc7" }
miraland-version = { path = "../version", version = "=1.14.17-rc7" }
rand = "0.7.0"
rayon = "1.5.3"
solarti-token = { version = "3.5", features = ["no-entrypoint"] }

[dev-dependencies]
miraland-core = { path = "../core", version = "=1.14.17-rc7" }
miraland-local-cluster = { path = "../local-cluster", version = "=1.14.17-rc7" }
miraland-test-validator = { path = "../test-validator", version = "=1.14.17-rc7" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
