[package]
name = "miraland-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
miraland-account-decoder = { workspace = true }
miraland-accounts-db = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-client = { workspace = true }
miraland-faucet = { workspace = true }
miraland-gossip = { workspace = true }
miraland-logger = { workspace = true }
miraland-measure = { workspace = true }
miraland-net-utils = { workspace = true }
miraland-rpc-client = { workspace = true, features = ["default"] }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-streamer = { workspace = true }
miraland-transaction-status = { workspace = true }
miraland-version = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
solarti-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
miraland-core = { workspace = true }
miraland-local-cluster = { workspace = true }
miraland-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
