[package]
name = "miraland-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
miraland-client = { workspace = true }
miraland-core = { workspace = true }
miraland-gossip = { workspace = true }
miraland-ledger = { workspace = true }
miraland-logger = { workspace = true }
miraland-measure = { workspace = true }
miraland-perf = { workspace = true }
miraland-poh = { workspace = true, features = ["dev-context-only-utils"] }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-streamer = { workspace = true }
miraland-tpu-client = { workspace = true }
miraland-version = { workspace = true }

[features]
dev-context-only-utils = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
