[package]
name = "miraland-banks-client"
version = "1.14.17"
description = "Solana banks client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-banks-client"
edition = "2021"

[dependencies]
borsh = "0.9.3"
futures = "0.3"
miraland-banks-interface = { path = "../banks-interface", version = "=1.14.17" }
miraland-program = { path = "../sdk/program", version = "=1.14.17" }
miraland-sdk = { path = "../sdk", version = "=1.14.17" }
tarpc = { version = "0.29.0", features = ["full"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
miraland-banks-server = { path = "../banks-server", version = "=1.14.17" }
miraland-runtime = { path = "../runtime", version = "=1.14.17" }

[lib]
crate-type = ["lib"]
name = "solana_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
