[package]
name = "miraland-banks-client"
description = "Miraland banks client"
documentation = "https://docs.rs/miraland-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
miraland-banks-interface = { workspace = true }
miraland-program = { workspace = true }
miraland-sdk = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
miraland-banks-server = { workspace = true }
miraland-runtime = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
