[package]
name = "miraland-banks-interface"
version = "1.14.19"
description = "Miraland banks RPC interface"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-banks-interface"
edition = "2021"

[dependencies]
miraland-sdk = { path = "../sdk", version = "1.14.19" }
serde = { version = "1.0.138", features = ["derive"] }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "miraland_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
