[package]
name = "miraland-banks-server"
version = "1.14.17-rc3"
description = "Miraland banks server"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-banks-server"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
futures = "0.3"
miraland-banks-interface = { path = "../banks-interface", version = "=1.14.17-rc3" }
miraland-client = { path = "../client", version = "=1.14.17-rc3" }
miraland-runtime = { path = "../runtime", version = "=1.14.17-rc3" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc3" }
miraland-send-transaction-service = { path = "../send-transaction-service", version = "=1.14.17-rc3" }
tarpc = { version = "0.29.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "miraland_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
