[package]
name = "miraland-banks-server"
description = "Miraland banks server"
documentation = "https://docs.rs/miraland-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
miraland-accounts-db = { workspace = true }
miraland-banks-interface = { workspace = true }
miraland-client = { workspace = true }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-send-transaction-service = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["lib"]
name = "miraland_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
