[package]
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
edition = "2021"
name = "miraland-bench-streamer"
version = "1.14.17-rc7"
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = "0.5"
miraland-net-utils = { path = "../net-utils", version = "=1.14.17-rc7" }
miraland-streamer = { path = "../streamer", version = "=1.14.17-rc7" }
miraland-version = { path = "../version", version = "=1.14.17-rc7" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
