[package]
name = "miraland-bench-streamer"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
crossbeam-channel = { workspace = true }
miraland-net-utils = { workspace = true }
miraland-streamer = { workspace = true }
miraland-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
