[package]
name = "miraland-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-client = { workspace = true }
miraland-connection-cache = { workspace = true }
miraland-core = { workspace = true }
miraland-faucet = { workspace = true }
miraland-genesis = { workspace = true }
miraland-gossip = { workspace = true }
miraland-logger = { workspace = true }
miraland-measure = { workspace = true }
miraland-metrics = { workspace = true }
miraland-net-utils = { workspace = true }
miraland-rpc = { workspace = true }
miraland-rpc-client = { workspace = true }
miraland-rpc-client-api = { workspace = true }
miraland-rpc-client-nonce-utils = { workspace = true }
miraland-runtime = { workspace = true }
miraland-sdk = { workspace = true }
miraland-streamer = { workspace = true }
miraland-thin-client = { workspace = true }
miraland-tpu-client = { workspace = true }
miraland-version = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solarti-instruction-padding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
miraland-local-cluster = { workspace = true }
miraland-test-validator = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
