[package]
name = "miraland-bloom"
version = "1.14.17-rc4"
description = "Miraland bloom filter"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-bloom"
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
log = "0.4.17"
miraland-frozen-abi = { path = "../frozen-abi", version = "=1.14.17-rc4" }
miraland-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.14.17-rc4" }
miraland-sdk = { path = "../sdk", version = "=1.14.17-rc4" }
rand = "0.7.0"
rayon = "1.5.3"
serde = { version = "1.0.138", features = ["rc"] }
serde_derive = "1.0.103"

[lib]
crate-type = ["lib"]
name = "solana_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
