[package]
name = "miraland-bloom"
description = "Miraland bloom filter"
documentation = "https://docs.rs/miraland-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
miraland-frozen-abi = { workspace = true }
miraland-frozen-abi-macro = { workspace = true }
miraland-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
