[package]
name = "miraland-bucket-map"
description = "miraland-bucket-map"
documentation = "https://docs.rs/miraland-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
memmap2 = { workspace = true }
miraland-measure = { workspace = true }
miraland-sdk = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
miraland-logger = { workspace = true }
rayon = { workspace = true }

[lib]
crate-type = ["lib"]
name = "miraland_bucket_map"

[[bench]]
name = "bucket_map"
