[package]
name = "miraland-cargo-registry"
description = "Miraland cargo registry"
documentation = "https://docs.rs/miraland-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-cli = { workspace = true }
miraland-cli-config = { workspace = true }
miraland-cli-output = { workspace = true }
miraland-logger = { workspace = true }
miraland-remote-wallet = { workspace = true, features = ["default"] }
miraland-rpc-client = { workspace = true, features = ["default"] }
miraland-rpc-client-api = { workspace = true }
miraland-sdk = { workspace = true }
miraland-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []
