[package]
name = "miraland-clap-v3-utils"
version = "1.14.18"
description = "Miraland utilities for the clap v3"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Maintainers <maintainers@solana.foundation>"
]
repository = "https://github.com/miraland-labs/miraland"
license = "Apache-2.0"
homepage = "https://miraland.top/"
documentation = "https://docs.rs/miraland-clap-utils"
edition = "2021"

[dependencies]
chrono = "0.4.26"
clap = { version = "3.1.5", features = ["cargo"] }
miraland-perf = { path = "../perf", version = "1.14.18" }
miraland-remote-wallet = { path = "../remote-wallet", version = "1.14.18", default-features = false }
miraland-sdk = { path = "../sdk", version = "1.14.18" }
rpassword = "6.0"
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
url = "2.2.2"

[dev-dependencies]
tempfile = "3.6.0"

[lib]
name = "miraland_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
