[package]
name = "miraland-clap-v3-utils"
description = "Miraland utilities for the clap v3"
documentation = "https://docs.rs/miraland-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "4.4.11", features = ["cargo"] }
miraland-remote-wallet = { workspace = true }
miraland-sdk = { workspace = true }
miraland-zk-token-sdk = { workspace = true }
rpassword = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "miraland_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
