[package]
name = "miraland-cli-config"
description = "Blockchain for sovereign individuals living in Mirascape Horizon"
documentation = "https://docs.rs/miraland-cli-config"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dirs-next = { workspace = true }
lazy_static = { workspace = true }
miraland-clap-utils = { workspace = true }
miraland-sdk = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
